--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -62,8 +62,12 @@ jobs:
 
     steps:
     
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - name: Restore cached build
+      uses: actions/cache@v3
+      with:
+        key: cached-build-${{github.sha}}
+        path: .
+    
     
     - name: Check directory contents
       run: ls -l
