--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # The Project Key and Organization Key generated when setting up the project on SonarQube
 # Avaiable on the "Information" menu on the sonarcloud.io project page
-sonar.projectKey=
+sonar.projectKey=45dd00ccd6cd1d44c9c43a5fb31b339f1cb94086
 sonar.organization=cs1632
 
 # relative paths to source directories. More details and properties are described
